<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>bonita-connectors</artifactId>
		<groupId>org.bonitasoft.connectors</groupId>
		<version>1.0.0</version>
	</parent>

	<artifactId>bonita-connector-scripting</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<properties>
		<bonita.engine.version>6.2.0</bonita.engine.version>
	</properties>

	<dependencies>
		<dependency>
			<!-- Latest Version of Bonita released, against which the initial development 
				has been done. -->
			<!-- The connector will be tested against more recent version -->
			<artifactId>bonita-common</artifactId>
			<groupId>org.bonitasoft.engine</groupId>
			<version>${bonita.engine.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.12.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.8</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                    <configuration>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.5</version>
                    <executions>
                        <execution>
                            <id>assemble</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptor>${basedir}/connector-assembly.xml</descriptor>
                            <appendAssemblyId>true</appendAssemblyId>
                        </configuration>
                    </execution>
                    <execution>
                        <id>groovy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptor>${basedir}/groovy-assembly.xml</descriptor>
                        </configuration>
                    </execution>
                    <execution>
                        <id>groovyScript</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptor>${basedir}/groovyScript-assembly.xml</descriptor>
                        </configuration>
                    </execution>
                     <execution>
                        <id>shell</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptor>${basedir}/shell-assembly.xml</descriptor>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

	<scm>
		<developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-scripting.git</developerConnection>
		<connection>scm:git:git@github.com:bonitasoft/bonita-connector-scripting.git</connection>
		<url>https://github.com/bonitasoft/bonita-connector-scripting</url>
		<tag>HEAD</tag>
	</scm>

</project>